style header with material UI, bug in overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
 #map {
   height: 180px;
 }
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 /* #root {
   max-width: 1280px;
